#feature #pair [smc397, lcg37] still attempting to get tooltips working having issues with styling causes tooltip text to be behind other event elements

--- a/portfolio/src/main/resources/static/styles/planner.css
+++ b/portfolio/src/main/resources/static/styles/planner.css
@@ -24,12 +24,12 @@
   background-color: black;
   color: #fff;
   text-align: center;
-  padding: 5px 0;
+  padding: 10px 0;
   border-radius: 6px;
 
   /* Position the tooltip text - see examples below! */
-  position: absolute;
-  z-index: 1;
+  position: static;
+  z-index: 100;
   top: 30px;
   white-space: pre;
 }
